[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/game_UI.png" type="Texture" id=1]
[ext_resource path="res://art/barHorizontal_red.png" type="Texture" id=2]
[ext_resource path="res://art/baseHealthl_red.png" type="Texture" id=3]
[ext_resource path="res://scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://art/overheat_white.png" type="Texture" id=5]
[ext_resource path="res://art/overheat_red.png" type="Texture" id=6]
[ext_resource path="res://art/overheat.png" type="Texture" id=7]

[node name="UI" type="Node2D"]
scale = Vector2( 0.530774, 0.553621 )
script = ExtResource( 4 )

[node name="overheat" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="overheat"]
modulate = Color( 1, 0.223529, 0.223529, 1 )
margin_left = 879.847
margin_top = 525.63
margin_right = 957.847
margin_bottom = 556.63
rect_scale = Vector2( 2.45548, 2.45548 )
text = "Overheating
"

[node name="PicUI" type="TextureRect" parent="."]
margin_left = 0.611725
margin_top = -0.815674
margin_right = 1920.61
margin_bottom = 1079.18
rect_scale = Vector2( 1, 0.999731 )
texture = ExtResource( 1 )

[node name="RedSentry" type="RichTextLabel" parent="."]
margin_left = 205.0
margin_top = 69.0
margin_right = 270.0
margin_bottom = 83.0
bbcode_enabled = true
bbcode_text = "600"
text = "600"
scroll_active = false

[node name="BluSentry" type="RichTextLabel" parent="."]
margin_left = 1638.45
margin_top = 69.0
margin_right = 1703.45
margin_bottom = 83.0
bbcode_enabled = true
bbcode_text = "600"
text = "600"
scroll_active = false

[node name="Bars" type="Node2D" parent="."]

[node name="HealthBar" type="TextureProgress" parent="Bars"]
margin_left = 161.785
margin_top = 924.818
margin_right = 975.785
margin_bottom = 1016.82
rect_scale = Vector2( 0.43715, 0.418964 )
max_value = 600.0
value = 600.0
texture_progress = ExtResource( 2 )

[node name="Health" type="Label" parent="Bars/HealthBar"]
margin_left = 178.826
margin_top = 15.0996
margin_right = 218.826
margin_bottom = 29.0996
rect_scale = Vector2( 3.46901, 4.17028 )
text = "600/600"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseHealth" type="TextureProgress" parent="Bars"]
margin_left = 728.026
margin_top = 51.7404
margin_right = 1942.03
margin_bottom = 143.74
rect_scale = Vector2( -0.341907, 0.341992 )
max_value = 600.0
value = 600.0
rounded = true
texture_progress = ExtResource( 3 )

[node name="HeatWhite" type="TextureProgress" parent="Bars"]
margin_left = 879.847
margin_top = 458.798
margin_right = 1045.85
margin_bottom = 624.798
rect_scale = Vector2( 0.98, 0.969 )
texture_progress = ExtResource( 5 )
fill_mode = 5

[node name="HeatRed" type="TextureProgress" parent="Bars"]
margin_left = 881.0
margin_top = 457.0
margin_right = 933.0
margin_bottom = 509.0
rect_scale = Vector2( 3.1, 3.1 )
texture_progress = ExtResource( 6 )
fill_mode = 5

[node name="enemyBar" type="TextureProgress" parent="Bars"]
margin_left = 1375.35
margin_top = 167.985
margin_right = 2189.35
margin_bottom = 259.985
rect_scale = Vector2( 0.153126, 0.304055 )
max_value = 70.0
value = 50.0
texture_progress = ExtResource( 2 )

[node name="enemyBar2" type="TextureProgress" parent="Bars"]
margin_left = 1499.7
margin_top = 167.985
margin_right = 2313.7
margin_bottom = 259.985
rect_scale = Vector2( 0.153126, 0.304055 )
max_value = 70.0
value = 50.0
texture_progress = ExtResource( 2 )
